# KFlex

./: .gitmodules  0001-Patch.patch  CMakeLists.txt  Dockerfile  Makefile  NOTES  README.md  _config.yml  bench.sh  bench_preq.sh  bpftool  build-docker.sh  build.sh  index.md  isolate.sh
_data/: nav.yml
bench/: Bench.cpp  BenchCommon.hpp  BenchDataStructures.cpp  BenchRandomUtil.hpp  CMakeLists.txt
bpf/: Makefile  bench.bpf.c  bench_data_structures.bpf.c  bpf_experimental.bpf.h  bpf_helpers.bpf.h  bpf_linked_list.bpf.c  bpf_memalloc.bpf.c  bpf_memalloc.bpf.h  countsketch_common.h  ekc_list.bpf.h  ekc_spin_lock.bpf.c  ekcache.bpf.c  ekcache.countsketch.h  ffkx_memcache.bpf.c  ffkx_memcached.bpf.c  ffkx_redis.bpf.c  memcached.bpf.c  spinlock.bpf.c  vmlinux.h
bpf/include/: ekc_llist.bpf.h  ffkx_atomic.bpf.h  ffkx_errno.bpf.h  ffkx_hashmap.bpf.h  ffkx_hashmap.h  ffkx_heap.bpf.h  ffkx_helpers.bpf.h  ffkx_jhash.bpf.h  ffkx_list.bpf.h  ffkx_log.bpf.h  ffkx_malloc.bpf.h  ffkx_malloc.h  ffkx_net.bpf.h  ffkx_rbtree.bpf.h  ffkx_sketch.bpf.h  ffkx_spin_lock.bpf.h  ffkx_util.bpf.h  list_nulls.bpf.h  rculist_nulls.bpf.h
include/: BPF.hpp  BPFHeapAllocator.hpp  BPFMalloc.hpp  BPFMapAllocator.hpp  File.hpp  Socket.hpp  Utility.hpp
libbpf/include/uapi/linux/: bpf.h
libbpf/src/: libbpf.c  libbpf.h  libbpf.map
src/: BPF.cpp  BPFHeapAllocator.cpp  BPFMapAllocator.cpp  CMakeLists.txt  Main.cpp  Socket.cpp
tests/: CMakeLists.txt  TestBPF.cpp
